# pysqliteog

./: .gitignore  .python-version  LICENSE  README.md  setup.cfg
src/pysqliteog/: __init__.py  dbapi2.py  sqliteog.proto
src/tests/: test_db.py
tests/: test_db.py
