[metadata]
name = pysqliteog
version = 0.0.5
author = Aous Omran
author_email = aous.omr@gmail.com
description = a python DBAPI 2.0 interface for sqlite-og
long_description = file: README.md
long_description_content_type = text/markdown
requires-python = ">=3.8"
url = https://github.com/aousomran/pysqliteog
project_urls =
    Bug Tracker = https://github.com/aousomran/pysqliteog/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    grpcio
    protobuf

[options.packages.find]
where = src